--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,18 +1,24 @@
 {
     "manifest_version": 3,
-    "name": "My Extension",
+    "name": "Speechify Demo",
     "version": "1.0.1",
-    "description": "A plain text description",
+    "description": "Extension to generate audio for a page.",
     "icons": {
-        "16": "images/laptop-svgrepo-com.png",
-        "32": "images/laptop-svgrepo-com.png",
-        "48": "images/laptop-svgrepo-com.png",
-        "128": "images/laptop-svgrepo-com.png"
+        "16": "images/broadcast-svgrepo-com.png",
+        "32": "images/broadcast-svgrepo-com.png",
+        "48": "images/broadcast-svgrepo-com.png",
+        "128": "images/broadcast-svgrepo-com.png"
       },
+    "action" : {
+      "default_popup": "popup.html"
+    },
     "content_scripts": [
         {
           "matches": ["<all_urls>"],
           "js": ["scripts/content.js"]
         }
-      ]
+    ],
+    "background": {
+      "service_worker": "scripts/background.js"
+    }
   }
