--- a/client/manifest.json
+++ b/client/manifest.json
@@ -20,5 +20,8 @@
     ],
     "background": {
       "service_worker": "scripts/background.js"
-    }
+    },
+    "permissions": [
+      "storage"
+    ]
   }
